--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,11 @@ dev = [
     # ----------------
     "liccheck==0.9.2",
     "mypy==1.14.0",
+    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
+    "pip==24.3.1",
+    "pre-commit==4.0.1",
+    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
+    "setuptools==75.6.0",
     "towncrier==24.8.0",
 ]
 all-dev = [
